<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_streets"
        android:title="@string/menu_streets"/>

    <item android:id="@+id/menu_dark"
        android:title="@string/menu_dark"/>

    <item android:id="@+id/menu_light"
        android:title="@string/menu_light"/>

    <item android:id="@+id/menu_outdoors"
        android:title="@string/menu_outdoors"/>

    <item android:id="@+id/menu_satellite"
        android:title="@string/menu_satelit"/>

    <item android:id="@+id/menu_satellite_streets"
        android:title="@string/menu_satelit_streets"/>

    <item android:id="@+id/menu_traffic_day"
        android:title="@string/menu_traffic_day"/>

    <item android:id="@+id/menu_traffic_night"
        android:title="@string/menu_traffic_night"/>

</menu>